--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,9 +35,9 @@ install:
   # Prepend newly installed Python to the PATH of this build (this cannot be
   # done from inside the powershell script as it would require to restart
   # the parent CMD process).
-  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+  #- "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
-  - "%WITH_COMPILER% pip install nose"
+  - "%WITH_COMPILER% %PYTHON%/Scripts/pip install nose"
   # Download glpk.h and glpk.lib (separate files for 32/64 bit)
   - ps: Start-FileDownload 'https://opencobra.github.io/pypi_cobrapy_travis/glpk.h'
   - "appveyor DownloadFile https://opencobra.github.io/pypi_cobrapy_travis/glpk.lib%PYTHON_ARCH% -FileName glpk.lib"
