Set explicit install-dir

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,18 +42,17 @@ install:
   - ps: Start-FileDownload 'https://opencobra.github.io/pypi_cobrapy_travis/glpk.h'
   - "appveyor DownloadFile https://opencobra.github.io/pypi_cobrapy_travis/glpk.lib%PYTHON_ARCH% -FileName glpk.lib"
 #  - "%WITH_COMPILER% %PYTHON%/python setup.py build"
-  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
 
 build: off
 
 test_script:
   - "%WITH_COMPILER% %PYTHON%/python setup.py test"
 
-#after_test:
-#  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
+after_test:
+  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel --install-dir='blorgo'"
 
 artifacts:
-  - path: dist\*
+  - path: blorgo\*
 
 #on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
