use pip wheel to generate wheels 2

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,7 +49,8 @@ test_script:
   - "%WITH_COMPILER% %PYTHON%/python setup.py test"
 
 after_test:
-  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
+#  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
+  - "%WITH_COMPILER% %PYTHON%/Scripts/pip wheel --wheel-dir=blorgo" swiglpk
 
 artifacts:
   - path: blorgo\*
