--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ install:
   # Download glpk.h and glpk.lib (separate files for 32/64 bit)
   - ps: Start-FileDownload 'https://opencobra.github.io/pypi_cobrapy_travis/glpk.h'
   - "appveyor DownloadFile https://opencobra.github.io/pypi_cobrapy_travis/glpk.lib%PYTHON_ARCH% -FileName glpk.lib"
-  - "%WITH_COMPILER% %PYTHON%/python setup.py install --user"
+#  - "%WITH_COMPILER% %PYTHON%/python setup.py install --user"
 
 build: off
 
@@ -50,10 +50,11 @@ test_script:
 
 after_test:
 #  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
-  - "%WITH_COMPILER% %PYTHON%/Scripts/pip wheel --wheel-dir=blorgo swiglpk"
+#  - "%WITH_COMPILER% %PYTHON%/Scripts/pip wheel --wheel-dir=blorgo swiglpk"
+  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wininst"
 
 artifacts:
-  - path: blorgo\*
+  - path: dist\*
 
 #on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
