--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ init:
 
 install:
   - "powershell appveyor\\install.ps1"
-  - choco -y install swig
+  - cinst swig
 
   # Prepend newly installed Python to the PATH of this build (this cannot be
   # done from inside the powershell script as it would require to restart
