Try to fix yml parse error

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,6 +56,5 @@ after_test:
 artifacts:
   - path: dist\*
 
-on_success:
-  deploy_script:
-    - "powershell ./appveyor/pypi_deploy.ps1"
+deploy_script:
+  - "powershell appveyor\\pypi_deploy.ps1"
