Use twine to upload to phypi

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,7 +40,7 @@ install:
   # the parent CMD process).
   #- "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
-  - "%WITH_COMPILER% %PYTHON%/Scripts/pip install nose"
+  - "%WITH_COMPILER% %PYTHON%/Scripts/pip install nose twine"
   # Download glpk.h and glpk.lib (separate files for 32/64 bit)
   - ps: Start-FileDownload 'https://opencobra.github.io/pypi_cobrapy_travis/glpk.h'
   - "appveyor DownloadFile https://opencobra.github.io/pypi_cobrapy_travis/glpk.lib%PYTHON_ARCH% -FileName glpk.lib"
@@ -51,14 +51,15 @@ test_script:
   - "%WITH_COMPILER% %PYTHON%/python setup.py test"
 
 after_test:
-  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
+  - "%WITH_COMPILER% %PYTHON%/python setup.py sdist bdist_wheel"
 
 artifacts:
   - path: dist\*
 
 #  - "powershell appveyor\\deploy_to_pypi.ps1"
 deploy_script:
-     - "echo [pypi] > %USERPROFILE%\\.pypirc"
-     - "echo username: Nikolaus.Sonnenschein >> %USERPROFILE%\\.pypirc"
-     - "echo password: %password% >> %USERPROFILE%\\.pypirc"
-     - python setup.py sdist bdist_wheel upload
+  - "twine upload --username Nikolaus.Sonnenschein --password %password%"
+#     - "echo [pypi] > %USERPROFILE%\\.pypirc"
+#     - "echo username: Nikolaus.Sonnenschein >> %USERPROFILE%\\.pypirc"
+#     - "echo password: %password% >> %USERPROFILE%\\.pypirc"
+#     - python setup.py sdist bdist_wheel upload
