--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,15 +51,21 @@ test_script:
   - "%WITH_COMPILER% %PYTHON%/python setup.py test"
 
 after_test:
-  - "%WITH_COMPILER% %PYTHON%/python setup.py sdist bdist_wheel"
+  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
 
 artifacts:
   - path: dist\*
 
-#  - "powershell appveyor\\deploy_to_pypi.ps1"
 deploy_script:
-  - "%PYTHON%/Scripts/twine upload dist/* --username Nikolaus.Sonnenschein --password %password%"
-#     - "echo [pypi] > %USERPROFILE%\\.pypirc"
-#     - "echo username: Nikolaus.Sonnenschein >> %USERPROFILE%\\.pypirc"
-#     - "echo password: %password% >> %USERPROFILE%\\.pypirc"
-#     - python setup.py sdist bdist_wheel upload
+  - ps: >-
+      if($env:appveyor_repo_tag -eq 'True') {
+          Invoke-Expression "$env:CMD_IN_ENV twine upload dist/* --username Nikolaus.Sonnenschein --password $env:password"
+      }
+
+##  - "powershell appveyor\\deploy_to_pypi.ps1"
+#deploy_script:
+#  - "%PYTHON%/Scripts/twine upload dist/* --username Nikolaus.Sonnenschein --password %password%"
+##     - "echo [pypi] > %USERPROFILE%\\.pypirc"
+##     - "echo username: Nikolaus.Sonnenschein >> %USERPROFILE%\\.pypirc"
+##     - "echo password: %password% >> %USERPROFILE%\\.pypirc"
+##     - python setup.py sdist bdist_wheel upload
