--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,22 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
+- '2.7'
+- '3.4'
 before_install:
-  - sudo apt-get install libglpk-dev swig glpk-utils
+- sudo apt-get install libglpk-dev swig glpk-utils
 install:
-  - pip install nose
-  - python setup.py install
-# # command to run tests
+- pip install nose
+- python setup.py install
 script: python setup.py nosetests
+deploy:
+  provider: pypi
+  user: Nikolaus.Sonnenschein
+  password:
+    secure: gXJdJKDs69rAOLE4cmCp0dRGY8bI6eYmzIoj2VvGIWK64lJqffv3AfENROxcHCYcKMuRUf6qsm8rY+ZRLrbIm1eMUmdvDszxiXDsOEJTMDUWEov8raAPAN1hIDlgmJcCVNCvI4sdq+uvo6X1o4Ffpi1c1Up5vpVNT+321zUOiV0=
+  on:
+    tags: true
+    repo: biosustain/swiglpk
+    branch: appveyor
+env:
+  global:
+  - secure: PBcwrLg4ZwVi9Gw25Q2adNd0uK+NCqFSiYl+ZuumkEXs4NQBbSXVd719wrWKUFdIqBy+h9ETo4Vsz/QsTZzI2mSG4zqTkm+oUxMW1tJxYEeKZvCo7GfZ883VlKFgdqvh6iouEvHSjfGbwc5cUp98CbjgI5ni01vGpDQh2hgokkI=
