--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ python:
 - '2.7'
 - '3.4'
 before_install:
-- sudo apt-get install libglpk-dev swig glpk-utils
+- sudo apt-get install libglpk-dev swig glpk-utils pandoc
 install:
-- pip install nose
+- pip install nose pypandoc
 - python setup.py install
 script: python setup.py nosetests
 deploy:
