--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,10 @@ python:
 - '3.3'
 - '3.4'
 - '3.5'
-addons:
-  apt:
-    packages:
-    - swig
-    - libglpk-dev
-    - glpk-util
-    - pandoc
+before_install:
+- sudo apt-get install libglpk-dev swig glpk-utils pandoc
 install:
 - pip install nose pypandoc
-- which glpsol  # Check if this fails and why
 - python setup.py install
 script: python setup.py nosetests
 deploy:
