--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,6 @@
 VCS = git
 style = pep440
 versionfile_source = _version.py
-versionfile_build = _version.py
+versionfile_build =
 tag_prefix =
-parentdir_prefix = myproject-
+parentdir_prefix = swiglpk-
