--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,95 @@
-sudo: false
 language: python
-python:
-- '2.7'
-- '3.3'
-- '3.4'
-- '3.5'
-addons:
-  apt:
-    packages:
-    - swig
-    - libglpk-dev
-    - glpk-utils
-    - pandoc
-install:
-- pip install nose pypandoc
-- python setup.py install
-script: python setup.py nosetests
-deploy:
-  provider: pypi
-  user: Nikolaus.Sonnenschein
-  password:
-    secure: gXJdJKDs69rAOLE4cmCp0dRGY8bI6eYmzIoj2VvGIWK64lJqffv3AfENROxcHCYcKMuRUf6qsm8rY+ZRLrbIm1eMUmdvDszxiXDsOEJTMDUWEov8raAPAN1hIDlgmJcCVNCvI4sdq+uvo6X1o4Ffpi1c1Up5vpVNT+321zUOiV0=
-  distributions: "sdist"
-  on:
-    tags: true
-    repo: biosustain/swiglpk
-    branch: appveyor
+python: 3.5
+sudo: required
+dist: trusty
+services: docker
+sudo: required
+
 env:
   global:
-  - secure: PBcwrLg4ZwVi9Gw25Q2adNd0uK+NCqFSiYl+ZuumkEXs4NQBbSXVd719wrWKUFdIqBy+h9ETo4Vsz/QsTZzI2mSG4zqTkm+oUxMW1tJxYEeKZvCo7GfZ883VlKFgdqvh6iouEvHSjfGbwc5cUp98CbjgI5ni01vGpDQh2hgokkI=
+    - secure: PBcwrLg4ZwVi9Gw25Q2adNd0uK+NCqFSiYl+ZuumkEXs4NQBbSXVd719wrWKUFdIqBy+h9ETo4Vsz/QsTZzI2mSG4zqTkm+oUxMW1tJxYEeKZvCo7GfZ883VlKFgdqvh6iouEvHSjfGbwc5cUp98CbjgI5ni01vGpDQh2hgokkI=
+    - PLAT=x86_64
+    - UNICODE_WIDTH=32
+    - NP_BUILD_DEP="numpy==1.7.1"
+    - NP_TEST_DEP="numpy==1.7.1"
+
+matrix:
+  exclude:
+      - python: 3.5
+  include:
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - TOXENV=py27
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - UNICODE_WIDTH=16
+        - TOXENV=py27
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - TOXENV=py27
+        - PLAT=i686
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - PLAT=i686
+        - UNICODE_WIDTH=16
+        - TOXENV=py27
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.4
+        - TOXENV=py34
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.4
+        - TOXENV=py34
+        - PLAT=i686
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.5
+        - TOXENV=py35
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.5
+        - TOXENV=py35
+        - PLAT=i686
+    - os: osx
+      language: objective-c
+      env:
+        - MB_PYTHON_VERSION=2.7
+        - TOXENV=py27
+    - os: osx
+      language: objective-c
+      env:
+        - MB_PYTHON_VERSION=3.4
+        - TOXENV=py34
+    - os: osx
+      language: objective-c
+      env:
+        - MB_PYTHON_VERSION=3.5
+        - TOXENV=py35
+
+before_install:
+  - TEST_DEPENDS="nose tox"
+  - source multibuild/common_utils.sh
+  - source multibuild/travis_steps.sh
+  - before_install
+        
+install:
+  - pip install -U tox
+  - build_wheel . $PLAT
+
+script:
+  - tox -e ${TOXENV}
+  - tox -e flake8
+  - install_run $PLAT
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: deploy.sh
+  on:
+    branch: feature/auto-wheel
+#    tags: true
