--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,7 @@ matrix:
         - TOXENV=py35
 
 before_install:
+  - (git clone https://github.com/matthew-brett/multibuild.git && cd multibuild && git checkout d7ba4ae)
   - TEST_DEPENDS="nose tox"
   - source multibuild/common_utils.sh
   - source multibuild/travis_steps.sh
