--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ sudo: required
 
 env:
   global:
-    - secure: PBcwrLg4ZwVi9Gw25Q2adNd0uK+NCqFSiYl+ZuumkEXs4NQBbSXVd719wrWKUFdIqBy+h9ETo4Vsz/QsTZzI2mSG4zqTkm+oUxMW1tJxYEeKZvCo7GfZ883VlKFgdqvh6iouEvHSjfGbwc5cUp98CbjgI5ni01vGpDQh2hgokkI=
+    - secure: "meAZ7j4RADKM6Nm9upYOt+klXWDieipJQ4CWrKRYEZzjwq8HUq1+Qb41gJhUThYbbXQdssKVAv8CSS5Ii3Ka+t/y80qGjt6Yp0ZvyJyswJiv4Il0stNe8mNvD3DA95OilwCsx3mxs5WFiCVFmaBe/fpHr4N9jvHIAiLIj3/ytdQ="
+    - secure: "CGG4wmppNXaAD/GWIvhDhq+5F1jp+ecFFv99/RM/vENewb/V8O1Cg0fJ8hM/KAgNbEgAYJVgbShRPMN5UlT7UUgGPg66lVtWItvBMg/2uJaepzA1Mn7Ceuu7vv7/zbzFRZHFdjvbIzGU8kI4rJB++NfZFFezOaC0FhMuOgwcw0g="
     - PLAT=x86_64
     - UNICODE_WIDTH=32
     - NP_BUILD_DEP="numpy==1.7.1"
