resurrect use of deploy stage
previously didn't work on mac, perhaps it does when errexit from
multibuild has been reversed in the before_cache stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,5 +79,10 @@ before_cache:
 script:
   - install_run $PLAT
 
-after_success:
-  - scripts/deploy.sh
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: scripts/deploy.sh
+  on:
+    branch: feature/auto-wheel
+    tags: true
