--- a/.travis.yml
+++ b/.travis.yml
@@ -73,8 +73,16 @@ install:
   # why no tox? tox runs in its own virtual env it seems that `which glpsol` doesn't work there 
   - build_wheel . $PLAT
 
+before_cache:
+  - set +e
+
 script:
   - install_run $PLAT
 
-after_success:
-  - scripts/deploy.sh
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: scripts/deploy.sh
+  on:
+    branch: feature/auto-wheel
+    tags: true
