--- a/.travis.yml
+++ b/.travis.yml
@@ -84,5 +84,5 @@ deploy:
   skip_cleanup: true
   script: scripts/deploy.sh
   on:
-    branch: feature/auto-wheel
+    branch: master
     tags: true
