--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,14 +20,24 @@ environment:
       PYTHON_ARCH: "64"
       WINDOWS_SDK_VERSION: "v7.0"
 
+    - PYTHON: "C:\\Python27-x64"
+      PYTHON_VERSION: "2.7.12"
+      PYTHON_ARCH: "64"
+
     - PYTHON: "C:\\Python34-x64"
       PYTHON_VERSION: "3.4.3"
+      PYTHON_ARCH: "64"
+      WINDOWS_SDK_VERSION: "v7.1"
+
+    - PYTHON: "C:\\Python34-x64"
+      PYTHON_VERSION: "3.4.5"
       PYTHON_ARCH: "64"
       WINDOWS_SDK_VERSION: "v7.1"
 
     - PYTHON: "C:\\Python35-x64"
       PYTHON_VERSION: "3.5.2"
       PYTHON_ARCH: "64"
+      WINDOWS_SDK_VERSION: "v7.1"
 
   password:
     secure: fAEJDjlDCADoXUIYv64Ufdvta6dvRrj2c6NIgObi3No=
