--- a/.travis.yml
+++ b/.travis.yml
@@ -3,82 +3,74 @@ python: 3.5
 sudo: required
 dist: trusty
 services: docker
-sudo: required
-
 env:
   global:
-    - secure: "OyCxLHV86t/4gTOyXdmQa4ux3GYPPS5PCsr/mAfQkGaRPPwdmuSqt/3DZVB9OuWmVn0I8/7I+jNHiLdW7TkHYeDgJzR3cZM6yy/Ear7igV+zlGJStCpCiBX9kzOxxShtZqTWq48ET8eAhlEF+cBXg1IBKv5orQrhxon8JszFHfM="
-    - secure: "Ao68oM4+c+uV3MYAsR3KNpKVpVDOnCoCRhF0CPHh0sYEcFH7EM5wCy5fzYSo8iThcV4pCuzJ/ThMtijNDmVoAH7xPfanJL3IMpq0urp8AVruv5vjKzG40G3BK0nMCKDUBwPSN1e3YCl5tBxutqW7K95CrQ4tY1pL6I1+IU/w5nM="
-    - PLAT=x86_64
-    - UNICODE_WIDTH=32
-    - NP_BUILD_DEP="numpy==1.7.1"
-    - NP_TEST_DEP="numpy==1.7.1"
-
+  - PLAT=x86_64
+  - UNICODE_WIDTH=32
+  - NP_BUILD_DEP="numpy==1.7.1"
+  - NP_TEST_DEP="numpy==1.7.1"
+  - secure: hd1Pl8/9iiweqYM0WjDzeQOM5JcqYUfhEmmD3PkDF4ff45xEJhAbalRZByzSPuqXoXIGZx7aJdlc/SSIyIptkOzY0k0r/VuB8MY8auCR8qifvE5YdRtgYDc3ni6mT4GXWWADWbd/5lrgSq+HSEFew89lct+Kk609vDpcFxxZpLc=
+  - secure: laA/davmLILdmA6OthPaSQKMJslm9wkVmAmb8sxc/jmS3RiExFO5/yq7j30TCHRf2r43Sv1/Bswzgrcd4xY5AGbLSWZBQ3NB0kQYHBtbUsV5mtVy9kNIUcpUnWoDYDXN4Tx1AEg5sDiv+b06BW2IYDDvpt+87eH9kt1nOt3OnVs=
 matrix:
   exclude:
-      - python: 3.5
+  - python: 3.5
   include:
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=2.7
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=2.7
-        - UNICODE_WIDTH=16
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=2.7
-        - PLAT=i686
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=2.7
-        - PLAT=i686
-        - UNICODE_WIDTH=16
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=3.4
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=3.4
-        - PLAT=i686
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=3.5
-        - TOXENV=py35
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=3.5
-        - PLAT=i686
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=2.7
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=3.4
-    - os: osx
-      language: objective-c
-      env:
-        - MB_PYTHON_VERSION=3.5
-
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=2.7
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=2.7
+    - UNICODE_WIDTH=16
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=2.7
+    - PLAT=i686
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=2.7
+    - PLAT=i686
+    - UNICODE_WIDTH=16
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.4
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.4
+    - PLAT=i686
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.5
+    - TOXENV=py35
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.5
+    - PLAT=i686
+  - os: osx
+    language: objective-c
+    env:
+    - MB_PYTHON_VERSION=2.7
+  - os: osx
+    language: objective-c
+    env:
+    - MB_PYTHON_VERSION=3.4
+  - os: osx
+    language: objective-c
+    env:
+    - MB_PYTHON_VERSION=3.5
 before_install:
-  - (git clone https://github.com/matthew-brett/multibuild.git && cd multibuild && git checkout 06036d5349a)
-  - TEST_DEPENDS="nose"
-  - source multibuild/common_utils.sh
-  - source multibuild/travis_steps.sh
-  - before_install
-
+- "(git clone https://github.com/matthew-brett/multibuild.git && cd multibuild &&
+  git checkout 06036d5349a)"
+- TEST_DEPENDS="nose"
+- source multibuild/common_utils.sh
+- source multibuild/travis_steps.sh
+- before_install
 install:
-  # why no tox? tox runs in its own virtual env it seems that `which glpsol` doesn't work there 
-  - build_wheel . $PLAT
-
+- build_wheel . $PLAT
 before_cache:
-  - set +e
-
+- set +e
 script:
-  - install_run $PLAT
-
+- install_run $PLAT
 deploy:
   provider: script
   skip_cleanup: true
