--- a/appveyor.yml
+++ b/appveyor.yml
@@ -120,7 +120,7 @@ install:
   - "powershell appveyor\\install.ps1"
   - choco install -y swig
 
-  - "%CMD_IN_ENV% pip install nose twine nose"
+  - "%CMD_IN_ENV% pip install nose twine wheel"
   # Download glpk.h and glpk.lib (separate files for 32/64 bit)
   - ps: Start-FileDownload 'https://opencobra.github.io/pypi_cobrapy_travis/glpk.h'
   - "appveyor DownloadFile https://opencobra.github.io/pypi_cobrapy_travis/glpk.lib%PYTHON_ARCH% -FileName glpk.lib"
