--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,66 +1,36 @@
 environment:
 
-  global:
-    # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
-    # /E:ON and /V:ON options are not enabled in the batch script intepreter
-    # See: http://stackoverflow.com/a/13751649/163740
-    WITH_COMPILER: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_compiler.cmd"
-
   matrix:
     - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.12"
-      PYTHON_ARCH: "32"
-
     - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.5"
-      PYTHON_ARCH: "32"
-
+    - PYTHON: "C:\\Python35"
     - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.9"
-      PYTHON_ARCH: "64"
-      WINDOWS_SDK_VERSION: "v7.0"
-
-    - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.12"
-      PYTHON_ARCH: "64"
-
     - PYTHON: "C:\\Python34-x64"
-      PYTHON_VERSION: "3.4.5"
-      PYTHON_ARCH: "64"
-      WINDOWS_SDK_VERSION: "v7.1"
-
+      DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python35-x64"
-      PYTHON_VERSION: "3.5.2"
-      PYTHON_ARCH: "64"
-      WINDOWS_SDK_VERSION: "v7.1"
-
-  password:
-    secure: fAEJDjlDCADoXUIYv64Ufdvta6dvRrj2c6NIgObi3No=
 
 init:
-  - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
+  - "ECHO %PYTHON%"
 
 install:
-  - "powershell appveyor\\install.ps1"
   - choco install -y swig
+  - "%PYTHON%\\python.exe -m pip install -U pip"
 
   # Prepend newly installed Python to the PATH of this build (this cannot be
   # done from inside the powershell script as it would require to restart
   # the parent CMD process).
   #- "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
-  - "%WITH_COMPILER% %PYTHON%/Scripts/pip install nose twine nose"
-  # Download glpk.h and glpk.lib (separate files for 32/64 bit)
-  - ps: Start-FileDownload 'https://opencobra.github.io/pypi_cobrapy_travis/glpk.h'
-  - "appveyor DownloadFile https://opencobra.github.io/pypi_cobrapy_travis/glpk.lib%PYTHON_ARCH% -FileName glpk.lib"
+  - "%PYTHON%\\python.exe -m pip install nose twine nose"
+  - "appveyor\\build.cmd %PYTHON%/python appveyor/build_glpk.py"
 
 build: off
 
 test_script:
-  - "%WITH_COMPILER% %PYTHON%/python -m nose -v"
+  - "appveyor\\build.cmd %PYTHON%/python -m nose -v"
 
 after_test:
-  - "%WITH_COMPILER% %PYTHON%/python setup.py bdist_wheel"
+  - "appveyor\\build.cmd %PYTHON%/python setup.py bdist_wheel"
 
 artifacts:
   - path: dist\*
@@ -70,11 +40,3 @@ deploy_script:
       if($env:appveyor_repo_tag -eq 'True') {
           Invoke-Expression "$env:PYTHON/Scripts/twine upload dist/* --username Nikolaus.Sonnenschein --password $env:password"
       }
-
-##  - "powershell appveyor\\deploy_to_pypi.ps1"
-#deploy_script:
-#  - "%PYTHON%/Scripts/twine upload dist/* --username Nikolaus.Sonnenschein --password %password%"
-##     - "echo [pypi] > %USERPROFILE%\\.pypirc"
-##     - "echo username: Nikolaus.Sonnenschein >> %USERPROFILE%\\.pypirc"
-##     - "echo password: %password% >> %USERPROFILE%\\.pypirc"
-##     - python setup.py sdist bdist_wheel upload
