--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,12 @@ environment:
       DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python35-x64"
 
+cache:
+  - C:\ProgramData\chocolatey\bin -> appveyor.yml
+  - C:\ProgramData\chocolatey\lib -> appveyor.yml
+  - glpk_build -> appveyor/build_glpk.py
+  - pip_cache -> appveyor.yml
+
 init:
   - "ECHO %PYTHON%"
 
