fix: fix windows syntax error (retarded monkey language)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -108,8 +108,8 @@ build: off
 
 test_script:
   - "mkdir testdir"
+  - "copy test_swiglpk.py testdir"
   - "cd testdir"
-  - "copy ..\\test_swiglpk.py ."
   - "%CMD_IN_ENV% python -m nose -v"
 
 after_test:
