--- a/appveyor.yml
+++ b/appveyor.yml
@@ -108,8 +108,9 @@ build: off
 
 test_script:
   - "mkdir testdir"
-  - "copy test_swiglpk.py testdir\\"
+  - "copy test_swiglpk.py testdir\\test_swiglpk.py"
   - "cd testdir"
+  - "dir"
   - "%CMD_IN_ENV% python -m nose -v"
 
 after_test:
