Test in a non-source directory on appveyor (#17)
* fix: test with installed swiglpk on appveyor

* fix: fix windows syntax error

* fix: fix windows syntax error

* fix: fix windows syntax error (retarded monkey language)

* fix: fix windows syntax error (retarded monkey language)

* fix: fix windows syntax error (retarded monkey language)

* fix: fix windows syntax error (retarded monkey language)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -102,10 +102,19 @@ install:
 
   - "%CMD_IN_ENV% pip install nose twine wheel"
 
+  - "%CMD_IN_ENV% python setup.py install"
+
 build: off
 
 test_script:
-  - "%CMD_IN_ENV% python -m nose -v"
+  - "mkdir testdir"
+  - "copy test_swiglpk.py testdir\\test_swiglpk.py"
+  - "dir"
+  - "cd testdir"
+  - "dir"
+  - "%PYTHON%\\python -m nose -v"
+  - "cd .."
+  - "dir"
 
 after_test:
   - "%CMD_IN_ENV% python setup.py bdist_wheel"
