fix: add py36 to build plans

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,14 @@ matrix:
     env:
     - MB_PYTHON_VERSION=3.5
     - PLAT=i686
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.6
+    - TOXENV=py36
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.6
+    - PLAT=i686
   - os: osx
     language: objective-c
     env:
@@ -58,9 +66,13 @@ matrix:
     language: objective-c
     env:
     - MB_PYTHON_VERSION=3.5
+  - os: osx
+    language: objective-c
+    env:
+    - MB_PYTHON_VERSION=3.6
 before_install:
 - "(git clone https://github.com/matthew-brett/multibuild.git && cd multibuild &&
-  git checkout 06036d5349a)"
+  git checkout e6ebbfa)"
 - TEST_DEPENDS="nose"
 - source multibuild/common_utils.sh
 - source multibuild/travis_steps.sh
