--- a/appveyor.yml
+++ b/appveyor.yml
@@ -102,13 +102,13 @@ install:
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
   - "pip install --disable-pip-version-check --user --upgrade pip"
+  - "pip install "
 
   - "powershell appveyor\\install.ps1"
-  - choco install -y swig
+
+  - "%CMD_IN_ENV% pip install setuptools>=24.0 nose twine wheel"
 
   - "%CMD_IN_ENV% python appveyor/build_glpk.py"
-
-  - "%CMD_IN_ENV% pip install nose twine wheel"
 
   - "%CMD_IN_ENV% python setup.py install"
 
