fix: stubborn setuptools..

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -106,7 +106,9 @@ install:
   - "powershell appveyor\\install.ps1"
   - choco install -y swig
 
-  - "%CMD_IN_ENV% pip install nose twine wheel setuptools>=24.0"
+  - "%CMD_IN_ENV% pip install nose twine wheel setuptools>=34.0"
+
+  - "%CMD_IN_ENV% python -c 'import setuptools; print(setuptools.__version__)'"
 
   - "%CMD_IN_ENV% python appveyor/build_glpk.py"
 
