--- a/appveyor.yml
+++ b/appveyor.yml
@@ -106,12 +106,9 @@ install:
   - "powershell appveyor\\install.ps1"
   - choco install -y swig
 
-  - "%CMD_IN_ENV% pip install nose twine wheel setuptools>=34.0"
-
-  - "%CMD_IN_ENV% pip freeze"
-
-  - "%CMD_IN_ENV% python appveyor/build_glpk.py"
-
+  - "%PYTHON%/python -m pip install pip setuptools>=34.0 nose twine wheel --upgrade"
+  - "%PYTHON%/pip freeze"
+  - "%CMD_IN_ENV% %PYTHON%/python appveyor/build_glpk.py"
   - "%CMD_IN_ENV% python setup.py install"
 
 build: off
