--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,6 +56,14 @@ environment:
       PYTHON_VERSION: "3.5.0"
       PYTHON_ARCH: "64"
 
+    - PYTHON: "C:\\Python36"
+      PYTHON_VERSION: "3.6.0"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python36-x64"
+      PYTHON_VERSION: "3.6.0"
+      PYTHON_ARCH: "64"
+
   password:
     secure: fAEJDjlDCADoXUIYv64Ufdvta6dvRrj2c6NIgObi3No=
 
@@ -98,10 +106,8 @@ install:
   - "powershell appveyor\\install.ps1"
   - choco install -y swig
 
-  - "%CMD_IN_ENV% python appveyor/build_glpk.py"
-
-  - "%CMD_IN_ENV% pip install nose twine wheel"
-
+  - "%PYTHON%/python -m pip install pip setuptools>=34.0 nose twine wheel --upgrade"
+  - "%CMD_IN_ENV% %PYTHON%/python appveyor/build_glpk.py"
   - "%CMD_IN_ENV% python setup.py install"
 
 build: off
