--- a/.travis.yml
+++ b/.travis.yml
@@ -96,6 +96,7 @@ before_install:
   - source multibuild/common_utils.sh
   - source multibuild/travis_steps.sh
   - before_install
+  - pip install requests gitpython
 
 install:
   - build_wheel . $PLAT
