--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
-#branches:
-# only:
-# - master
-# - devel
-# - /^[0-9]+\.[0-9]+\.[0-9]+[.0-9ab]*$/
-#
+branches:
+ only:
+ - master
+ - devel
+ - /^[0-9]+\.[0-9]+\.[0-9]+[.0-9ab]*$/
+
 environment:
   global:
 
