--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,10 @@ matrix:
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.7
+        - TOXENV=py37
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.7
         - PLAT=i686
     - os: osx
       language: objective-c
