--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
-branches:
- only:
- - master
- - devel
- - /^[0-9]+\.[0-9]+\.[0-9]+[.0-9ab]*$/
+#branches:
+# only:
+# - master
+# - devel
+# - /^[0-9]+\.[0-9]+\.[0-9]+[.0-9ab]*$/
 
 environment:
   global:
