--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ env:
   - secure: hd1Pl8/9iiweqYM0WjDzeQOM5JcqYUfhEmmD3PkDF4ff45xEJhAbalRZByzSPuqXoXIGZx7aJdlc/SSIyIptkOzY0k0r/VuB8MY8auCR8qifvE5YdRtgYDc3ni6mT4GXWWADWbd/5lrgSq+HSEFew89lct+Kk609vDpcFxxZpLc=
   - secure: laA/davmLILdmA6OthPaSQKMJslm9wkVmAmb8sxc/jmS3RiExFO5/yq7j30TCHRf2r43Sv1/Bswzgrcd4xY5AGbLSWZBQ3NB0kQYHBtbUsV5mtVy9kNIUcpUnWoDYDXN4Tx1AEg5sDiv+b06BW2IYDDvpt+87eH9kt1nOt3OnVs=
 
-#branches:
-#  only:
-#  - master
-#  - devel
-#  - /^[0-9]+\.[0-9]+\.[0-9]+[.0-9ab]*$/
+branches:
+  only:
+  - master
+  - devel
+  - /^[0-9]+\.[0-9]+\.[0-9]+[.0-9ab]*$/
 
 matrix:
   exclude:
