fix: set correct repo url for release script

--- a/.travis.yml
+++ b/.travis.yml
@@ -113,6 +113,7 @@ script:
   - install_run $PLAT
   - ls ${TRAVIS_BUILD_DIR}/wheelhouse/
 
+
 deploy:
   - provider: script
     skip_cleanup: true
@@ -124,5 +125,6 @@ deploy:
     skip_cleanup: true
     script: scripts/release.sh
     on:
-      condition: type = cron and env(MB_PYTHON_VERSION) = 3.7
+      branch: master
+      condition: type = cron
 
